frontend/test/should_fail/method_model_inh_ovrrd_failnp2.gm
node class N
{
	procedure bar(var x:int, var y:int) : (int, int)
	{
		return (42, 42);
	}	
	
	procedure baz(n:N)
	{
		return;
	}
}

node class NN extends N
{
	procedure bar(var x:int, var y:int) : (string, boolean)
	{
		return ("42", true);
	}	

	procedure baz(n:NN)
	{
		return;
	}	
}
